[gd_scene load_steps=4 format=3 uid="uid://qcw4qnau8qtr"]

[ext_resource type="Script" path="res://ui/elements/keybind_changer.gd" id="1_1j7ke"]
[ext_resource type="Theme" uid="uid://b2kccvfeeesw" path="res://ui/medium_buttons.tres" id="2_m6bjd"]
[ext_resource type="Script" path="res://ui/elements/ChangeKey.gd" id="3_qao7i"]

[node name="KeybindChanger" type="HBoxContainer"]
size_flags_horizontal = 3
script = ExtResource("1_1j7ke")

[node name="ActionName" type="Label" parent="."]
layout_mode = 2

[node name="ChangeKey" type="Button" parent="."]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("2_m6bjd")
toggle_mode = true
script = ExtResource("3_qao7i")

[connection signal="key_pressed" from="ChangeKey" to="." method="_on_key_pressed"]
[connection signal="pressed" from="ChangeKey" to="." method="_on_change_key_pressed"]
